// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`HeightActionSheet renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": undefined,
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": {
              "left": 999999,
              "position": "absolute",
              "top": 999999,
            },
          },
          "type": "SafeAreaView",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "onTouchEnd": [Function],
                    "onTouchMove": [Function],
                    "onTouchStart": [Function],
                    "style": {
                      "backgroundColor": "black",
                      "height": "100%",
                      "opacity": 0.3,
                      "position": "absolute",
                      "width": "100%",
                      "zIndex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "aria-role": "button",
                        "onLongPress": [Function],
                        "onPress": [Function],
                        "style": {
                          "height": 933.8,
                          "width": "100%",
                        },
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "onTouchEnd": [Function],
                    "onTouchMove": [Function],
                    "onTouchStart": [Function],
                    "style": {
                      "height": 933.8,
                      "width": "100%",
                      "zIndex": 10,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": [
                              {
                                "alignSelf": "center",
                                "backgroundColor": "#f0f0f0",
                                "borderRadius": 100,
                                "height": 6,
                                "marginVertical": 5,
                                "width": 45,
                              },
                              {
                                "backgroundColor": "#f0f0f0",
                              },
                            ],
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": null,
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "display": "flex",
                                      "flexGrow": 1,
                                      "flexShrink": 1,
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            {
                                              "$$typeof": Symbol(react.test.json),
                                              "children": [
                                                {
                                                  "$$typeof": Symbol(react.test.json),
                                                  "children": [
                                                    "Done",
                                                  ],
                                                  "props": {
                                                    "style": {
                                                      "color": "#092E3A",
                                                      "fontSize": 16,
                                                      "fontWeight": "700",
                                                    },
                                                  },
                                                  "type": "Text",
                                                },
                                              ],
                                              "props": {
                                                "style": {
                                                  "flexDirection": "row",
                                                },
                                                "testID": undefined,
                                              },
                                              "type": "View",
                                            },
                                          ],
                                          "props": {
                                            "style": {
                                              "flexDirection": "row",
                                            },
                                            "testID": undefined,
                                          },
                                          "type": "View",
                                        },
                                      ],
                                      "props": {
                                        "accessibilityHint": "Press to perform action",
                                        "accessibilityLabel": "Done",
                                        "accessibilityRole": "button",
                                        "accessibilityState": {
                                          "disabled": false,
                                        },
                                        "disabled": false,
                                        "onPress": [Function: debounced],
                                        "style": {
                                          "alignItems": "center",
                                          "alignSelf": "flex-start",
                                          "backgroundColor": "#0E9DCD",
                                          "borderColor": undefined,
                                          "borderRadius": 360,
                                          "borderWidth": undefined,
                                          "flexDirection": "column",
                                          "height": undefined,
                                          "justifyContent": "center",
                                          "paddingHorizontal": 20,
                                          "paddingVertical": 8,
                                          "width": "auto",
                                        },
                                        "testID": undefined,
                                      },
                                      "type": "PressableScale",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "33%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "onPointerEnter": [Function: AsyncFunction],
                                "onPointerLeave": [Function: AsyncFunction],
                                "style": {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "width": "100%",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "0 ft",
                                            "value": "0",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "1 ft",
                                            "value": "1",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "2 ft",
                                            "value": "2",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "3 ft",
                                            "value": "3",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "4 ft",
                                            "value": "4",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "5 ft",
                                            "value": "5",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "6 ft",
                                            "value": "6",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "7 ft",
                                            "value": "7",
                                          },
                                          "type": "Picker.Item",
                                        },
                                      ],
                                      "props": {
                                        "itemStyle": {
                                          "color": "#1a1a1a",
                                          "fontSize": 20,
                                          "height": 180,
                                        },
                                        "onValueChange": [Function],
                                        "selectedValue": "6",
                                        "style": {
                                          "backgroundColor": "#FFFFFF",
                                          "height": 180,
                                        },
                                      },
                                      "type": "Picker",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "50%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "0 in",
                                            "value": "0",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "1 in",
                                            "value": "1",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "2 in",
                                            "value": "2",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "3 in",
                                            "value": "3",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "4 in",
                                            "value": "4",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "5 in",
                                            "value": "5",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "6 in",
                                            "value": "6",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "7 in",
                                            "value": "7",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "8 in",
                                            "value": "8",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "9 in",
                                            "value": "9",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "10 in",
                                            "value": "10",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "11 in",
                                            "value": "11",
                                          },
                                          "type": "Picker.Item",
                                        },
                                      ],
                                      "props": {
                                        "itemStyle": {
                                          "color": "#1a1a1a",
                                          "fontSize": 20,
                                          "height": 180,
                                        },
                                        "onValueChange": [Function],
                                        "selectedValue": "0",
                                        "style": {
                                          "backgroundColor": "#FFFFFF",
                                          "height": 180,
                                        },
                                      },
                                      "type": "Picker",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "50%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "onPointerEnter": [Function: AsyncFunction],
                                "onPointerLeave": [Function: AsyncFunction],
                                "style": {
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "width": "100%",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "onPointerEnter": [Function: AsyncFunction],
                            "onPointerLeave": [Function: AsyncFunction],
                            "style": {
                              "marginBottom": 48,
                              "paddingLeft": 16,
                              "paddingRight": 16,
                              "width": "100%",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "style": {
                          "marginTop": 0,
                          "maxHeight": 812,
                          "transform": [
                            {
                              "translateY": Value {
                                "_value": 0,
                                "addListener": [class Function],
                                "animate": [class Function],
                                "extractOffset": [class Function],
                                "flattenOffset": [class Function],
                                "interpolate": [class Function],
                                "removeAllListeners": [class Function],
                                "removeListener": [class Function],
                                "resetAnimation": [class Function],
                                "setOffset": [class Function],
                                "setValue": [class Function],
                                "stopAnimation": [class Function],
                                "stopTracking": [class Function],
                                "track": [class Function],
                              },
                            },
                          ],
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "onLayout": [Function: AsyncFunction],
                    "style": [
                      {
                        "alignSelf": "center",
                        "backgroundColor": "white",
                        "width": "100%",
                      },
                      {
                        "borderRadius": 10,
                      },
                      undefined,
                      {
                        "boxShadow": "1.5px 2.5px 3.5px rgba(0, 0, 0, 0.2)",
                        "elevation": 5,
                        "maxHeight": 812,
                        "opacity": Value {
                          "_value": 0,
                          "addListener": [class Function],
                          "animate": [class Function],
                          "extractOffset": [class Function],
                          "flattenOffset": [class Function],
                          "interpolate": [class Function],
                          "removeAllListeners": [class Function],
                          "removeListener": [class Function],
                          "resetAnimation": [class Function],
                          "setOffset": [class Function],
                          "setValue": [class Function],
                          "stopAnimation": [class Function],
                          "stopTracking": [class Function],
                          "track": [class Function],
                        },
                        "transform": [
                          {
                            "translateY": Value {
                              "_value": 0,
                              "addListener": [class Function],
                              "animate": [class Function],
                              "extractOffset": [class Function],
                              "flattenOffset": [class Function],
                              "interpolate": [class Function],
                              "removeAllListeners": [class Function],
                              "removeListener": [class Function],
                              "resetAnimation": [class Function],
                              "setOffset": [class Function],
                              "setValue": [class Function],
                              "stopAnimation": [class Function],
                              "stopTracking": [class Function],
                              "track": [class Function],
                            },
                          },
                        ],
                        "zIndex": 11,
                      },
                    ],
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "bounces": false,
            "contentContainerStyle": {
              "width": 375,
            },
            "keyboardShouldPersistTaps": undefined,
            "onMomentumScrollBegin": [Function: AsyncFunction],
            "onMomentumScrollEnd": [Function: AsyncFunction],
            "onScrollBeginDrag": [Function: AsyncFunction],
            "onTouchEnd": [Function],
            "scrollEnabled": false,
            "scrollEventThrottle": 5,
            "scrollsToTop": false,
            "showsVerticalScrollIndicator": false,
            "style": [
              {
                "backgroundColor": "transparent",
                "height": "100%",
                "width": "100%",
              },
              {
                "width": 375,
              },
            ],
          },
          "type": "FlatList",
        },
      ],
      "props": {
        "onLayout": [Function: AsyncFunction],
        "style": [
          {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          {
            "opacity": Value {
              "_value": 0,
              "addListener": [class Function],
              "animate": [class Function],
              "extractOffset": [class Function],
              "flattenOffset": [class Function],
              "interpolate": [class Function],
              "removeAllListeners": [class Function],
              "removeListener": [class Function],
              "resetAnimation": [class Function],
              "setOffset": [class Function],
              "setValue": [class Function],
              "stopAnimation": [class Function],
              "stopTracking": [class Function],
              "track": [class Function],
            },
            "width": 375,
          },
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "animationType": "none",
    "onRequestClose": [Function],
    "onShow": undefined,
    "statusBarTranslucent": true,
    "supportedOrientations": [
      "portrait",
      "portrait-upside-down",
      "landscape",
      "landscape-left",
      "landscape-right",
    ],
    "transparent": true,
    "visible": false,
  },
  "type": "Modal",
}
`;

exports[`HeightActionSheet renders with different height value 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": undefined,
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "ref": {
              "current": null,
            },
            "style": {
              "left": 999999,
              "position": "absolute",
              "top": 999999,
            },
          },
          "type": "SafeAreaView",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "onTouchEnd": [Function],
                    "onTouchMove": [Function],
                    "onTouchStart": [Function],
                    "style": {
                      "backgroundColor": "black",
                      "height": "100%",
                      "opacity": 0.3,
                      "position": "absolute",
                      "width": "100%",
                      "zIndex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "aria-role": "button",
                        "onLongPress": [Function],
                        "onPress": [Function],
                        "style": {
                          "height": 933.8,
                          "width": "100%",
                        },
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "onTouchEnd": [Function],
                    "onTouchMove": [Function],
                    "onTouchStart": [Function],
                    "style": {
                      "height": 933.8,
                      "width": "100%",
                      "zIndex": 10,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": [
                              {
                                "alignSelf": "center",
                                "backgroundColor": "#f0f0f0",
                                "borderRadius": 100,
                                "height": 6,
                                "marginVertical": 5,
                                "width": 45,
                              },
                              {
                                "backgroundColor": "#f0f0f0",
                              },
                            ],
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": null,
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "display": "flex",
                                      "flexGrow": 1,
                                      "flexShrink": 1,
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            {
                                              "$$typeof": Symbol(react.test.json),
                                              "children": [
                                                {
                                                  "$$typeof": Symbol(react.test.json),
                                                  "children": [
                                                    "Done",
                                                  ],
                                                  "props": {
                                                    "style": {
                                                      "color": "#092E3A",
                                                      "fontSize": 16,
                                                      "fontWeight": "700",
                                                    },
                                                  },
                                                  "type": "Text",
                                                },
                                              ],
                                              "props": {
                                                "style": {
                                                  "flexDirection": "row",
                                                },
                                                "testID": undefined,
                                              },
                                              "type": "View",
                                            },
                                          ],
                                          "props": {
                                            "style": {
                                              "flexDirection": "row",
                                            },
                                            "testID": undefined,
                                          },
                                          "type": "View",
                                        },
                                      ],
                                      "props": {
                                        "accessibilityHint": "Press to perform action",
                                        "accessibilityLabel": "Done",
                                        "accessibilityRole": "button",
                                        "accessibilityState": {
                                          "disabled": false,
                                        },
                                        "disabled": false,
                                        "onPress": [Function: debounced],
                                        "style": {
                                          "alignItems": "center",
                                          "alignSelf": "flex-start",
                                          "backgroundColor": "#0E9DCD",
                                          "borderColor": undefined,
                                          "borderRadius": 360,
                                          "borderWidth": undefined,
                                          "flexDirection": "column",
                                          "height": undefined,
                                          "justifyContent": "center",
                                          "paddingHorizontal": 20,
                                          "paddingVertical": 8,
                                          "width": "auto",
                                        },
                                        "testID": undefined,
                                      },
                                      "type": "PressableScale",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "33%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "onPointerEnter": [Function: AsyncFunction],
                                "onPointerLeave": [Function: AsyncFunction],
                                "style": {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "width": "100%",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "0 ft",
                                            "value": "0",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "1 ft",
                                            "value": "1",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "2 ft",
                                            "value": "2",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "3 ft",
                                            "value": "3",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "4 ft",
                                            "value": "4",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "5 ft",
                                            "value": "5",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "6 ft",
                                            "value": "6",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "7 ft",
                                            "value": "7",
                                          },
                                          "type": "Picker.Item",
                                        },
                                      ],
                                      "props": {
                                        "itemStyle": {
                                          "color": "#1a1a1a",
                                          "fontSize": 20,
                                          "height": 180,
                                        },
                                        "onValueChange": [Function],
                                        "selectedValue": "5",
                                        "style": {
                                          "backgroundColor": "#FFFFFF",
                                          "height": 180,
                                        },
                                      },
                                      "type": "Picker",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "50%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "0 in",
                                            "value": "0",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "1 in",
                                            "value": "1",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "2 in",
                                            "value": "2",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "3 in",
                                            "value": "3",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "4 in",
                                            "value": "4",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "5 in",
                                            "value": "5",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "6 in",
                                            "value": "6",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "7 in",
                                            "value": "7",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "8 in",
                                            "value": "8",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "9 in",
                                            "value": "9",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "10 in",
                                            "value": "10",
                                          },
                                          "type": "Picker.Item",
                                        },
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": null,
                                          "props": {
                                            "label": "11 in",
                                            "value": "11",
                                          },
                                          "type": "Picker.Item",
                                        },
                                      ],
                                      "props": {
                                        "itemStyle": {
                                          "color": "#1a1a1a",
                                          "fontSize": 20,
                                          "height": 180,
                                        },
                                        "onValueChange": [Function],
                                        "selectedValue": "5",
                                        "style": {
                                          "backgroundColor": "#FFFFFF",
                                          "height": 180,
                                        },
                                      },
                                      "type": "Picker",
                                    },
                                  ],
                                  "props": {
                                    "onPointerEnter": [Function: AsyncFunction],
                                    "onPointerLeave": [Function: AsyncFunction],
                                    "style": {
                                      "width": "50%",
                                    },
                                    "testID": undefined,
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "onPointerEnter": [Function: AsyncFunction],
                                "onPointerLeave": [Function: AsyncFunction],
                                "style": {
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "width": "100%",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "onPointerEnter": [Function: AsyncFunction],
                            "onPointerLeave": [Function: AsyncFunction],
                            "style": {
                              "marginBottom": 48,
                              "paddingLeft": 16,
                              "paddingRight": 16,
                              "width": "100%",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "style": {
                          "marginTop": 0,
                          "maxHeight": 812,
                          "transform": [
                            {
                              "translateY": Value {
                                "_value": 0,
                                "addListener": [class Function],
                                "animate": [class Function],
                                "extractOffset": [class Function],
                                "flattenOffset": [class Function],
                                "interpolate": [class Function],
                                "removeAllListeners": [class Function],
                                "removeListener": [class Function],
                                "resetAnimation": [class Function],
                                "setOffset": [class Function],
                                "setValue": [class Function],
                                "stopAnimation": [class Function],
                                "stopTracking": [class Function],
                                "track": [class Function],
                              },
                            },
                          ],
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "onLayout": [Function: AsyncFunction],
                    "style": [
                      {
                        "alignSelf": "center",
                        "backgroundColor": "white",
                        "width": "100%",
                      },
                      {
                        "borderRadius": 10,
                      },
                      undefined,
                      {
                        "boxShadow": "1.5px 2.5px 3.5px rgba(0, 0, 0, 0.2)",
                        "elevation": 5,
                        "maxHeight": 812,
                        "opacity": Value {
                          "_value": 0,
                          "addListener": [class Function],
                          "animate": [class Function],
                          "extractOffset": [class Function],
                          "flattenOffset": [class Function],
                          "interpolate": [class Function],
                          "removeAllListeners": [class Function],
                          "removeListener": [class Function],
                          "resetAnimation": [class Function],
                          "setOffset": [class Function],
                          "setValue": [class Function],
                          "stopAnimation": [class Function],
                          "stopTracking": [class Function],
                          "track": [class Function],
                        },
                        "transform": [
                          {
                            "translateY": Value {
                              "_value": 0,
                              "addListener": [class Function],
                              "animate": [class Function],
                              "extractOffset": [class Function],
                              "flattenOffset": [class Function],
                              "interpolate": [class Function],
                              "removeAllListeners": [class Function],
                              "removeListener": [class Function],
                              "resetAnimation": [class Function],
                              "setOffset": [class Function],
                              "setValue": [class Function],
                              "stopAnimation": [class Function],
                              "stopTracking": [class Function],
                              "track": [class Function],
                            },
                          },
                        ],
                        "zIndex": 11,
                      },
                    ],
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "bounces": false,
            "contentContainerStyle": {
              "width": 375,
            },
            "keyboardShouldPersistTaps": undefined,
            "onMomentumScrollBegin": [Function: AsyncFunction],
            "onMomentumScrollEnd": [Function: AsyncFunction],
            "onScrollBeginDrag": [Function: AsyncFunction],
            "onTouchEnd": [Function],
            "scrollEnabled": false,
            "scrollEventThrottle": 5,
            "scrollsToTop": false,
            "showsVerticalScrollIndicator": false,
            "style": [
              {
                "backgroundColor": "transparent",
                "height": "100%",
                "width": "100%",
              },
              {
                "width": 375,
              },
            ],
          },
          "type": "FlatList",
        },
      ],
      "props": {
        "onLayout": [Function: AsyncFunction],
        "style": [
          {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          {
            "opacity": Value {
              "_value": 0,
              "addListener": [class Function],
              "animate": [class Function],
              "extractOffset": [class Function],
              "flattenOffset": [class Function],
              "interpolate": [class Function],
              "removeAllListeners": [class Function],
              "removeListener": [class Function],
              "resetAnimation": [class Function],
              "setOffset": [class Function],
              "setValue": [class Function],
              "stopAnimation": [class Function],
              "stopTracking": [class Function],
              "track": [class Function],
            },
            "width": 375,
          },
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "animationType": "none",
    "onRequestClose": [Function],
    "onShow": undefined,
    "statusBarTranslucent": true,
    "supportedOrientations": [
      "portrait",
      "portrait-upside-down",
      "landscape",
      "landscape-left",
      "landscape-right",
    ],
    "transparent": true,
    "visible": false,
  },
  "type": "Modal",
}
`;
